# BasicDSP

./: .gitignore  BasicDSP.pro  CMakeLists.txt  README.md  aboutdialog.cpp  aboutdialog.h  appveyor.yml  asttovm.cpp  asttovm.h  codeeditor.cpp  core.cpp  core.h  fft.cpp  fft.h  functiondefs.cpp  functiondefs.h  grammar.md  logging.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  namedslider.cpp  namedslider.h  parser.cpp  parser.h  portaudio_helper.h  reader.h  resources.qrc  scopewidget.cpp  scopewidget.h  scopewindow.cpp  scopewindow.h  soundcarddialog.cpp  soundcarddialog.h  soundcarddialog.ui  spectrumwidget.cpp  spectrumwidget.h  spectrumwindow.cpp  spectrumwindow.h  (+7 more)
contrib/: fft4g.cpp  fft4g.h
examples/: first_order_noise_shaper.dsp  oscillator.dsp  pll_example.dsp  second_order_noise_shaper.dsp
installer/: basicdsp_appveyor.nsi
resources/: basicdsp.rc  resources.qrc
src/: aboutdialog.cpp  aboutdialog.ui  asttovm.cpp  asttovm.h  codeeditor.cpp  codeeditor.h  core.cpp  core.h  fft.h  functiondefs.h  logging.cpp  logging.h  main.cpp  mainwindow.cpp  mainwindow.ui  namedslider.cpp  parser.cpp  parser.h  portaudio_helper.cpp  reader.cpp  scopewidget.cpp  scopewindow.cpp  scopewindow.h  scopewindow.ui  soundcarddialog.h  soundcarddialog.ui  spectrumwidget.cpp  spectrumwidget.h  spectrumwindow.cpp  spectrumwindow.h  tokenizer.h  varinfo.h  version.cpp.in  version.h  virtualmachine.cpp  virtualmachine.h  vumeter.cpp  wavstreamer.cpp  wavstreamer.h
tests/: main.cpp
